plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.11'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.foodlink'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.projectlombok:lombok:1.18.20'
//    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
//    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Spring Boot 2.5.0 이상부터는 libs 폴더 아래 ~~plain.jar 파일이 함께 만들어집니다.
// 해당 기능을 끄는 부분입니다.
jar {
    enabled = false
}

// libs 폴더 아래 생성될 jar 파일의 이름을 설정합니다.
//bootJar{
//    archiveFileName = 'app.jar'
//}

// bootJar 와 Jar task 의 차이, ~plain.jar 파일에 대한 내용은 아래 제 블로그 글에서 확인해주세요.
// https://orange-makiyato.tistory.com/89
